// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ds-filter-chip should include children as label 1`] = `
<button
  class="ds-c-filter-chip__button ds-not-a-real-class"
  id="filter-chip--1"
  type="button"
>
  <span
    aria-describedby="filter-chip--1-instructions"
    aria-hidden="true"
    class="ds-c-filter-chip__label"
  >
    Filter Chip!
  </span>
  <span
    class="ds-u-visibility--screen-reader"
    id="filter-chip--1-instructions"
  >
    
     
    Filter Chip! filter
     .
  </span>
  <span
    class="ds-c-filter-chip__clear-icon-container"
  >
    <svg
      aria-hidden="true"
      class="ds-c-icon ds-c-icon--close ds-c-icon--close-thin "
      height="1.5em"
      viewBox="-2 -2 18 18"
      width="1.5em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 13.0332964L13.0332964 0M13.0332964 13.0332964L0 0"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
  </span>
</button>
`;

exports[`ds-filter-chip should use the default thin icon 1`] = `
<span
  class="ds-c-filter-chip__clear-icon-container"
>
  <svg
    aria-hidden="true"
    class="ds-c-icon ds-c-icon--close ds-c-icon--close-thin "
    height="1.5em"
    viewBox="-2 -2 18 18"
    width="1.5em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 13.0332964L13.0332964 0M13.0332964 13.0332964L0 0"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="2"
    />
  </svg>
</span>
`;
